<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guiaturistico</string>
    <string name="action_settings">Settings</string>
    <string name="mensagembBoasVindas">Bem vindo ao seu Guia Turistico</string>
    <string name="avancar"> Avançar </string>
    <string name="portugal"> Portugal </string>
    <string name="ingles"> Inglês </string>
    <string name="frances"> Francês </string>
    <string name="espanhol"> Espanhol </string>
    <string name="alemao"> Alemão </string>
    <string name="chines"> Chinês </string>

    <string name="categoria">Selecione as categorias que deseja</string>
    <string name="categoriaMonumento"> Monumento</string>
    <string name="categoriaCultura"> Cultura </string>
    <string name="categoriaGastronomia"> Gastronomia </string>
    <string name="categoriaAlojamento"> Alojamento </string>
    <string name="categoriaAgenda"> Agenda Cultural </string>
    <string name="categoriaPraia"> Praia </string>
    <string name="categoriaDesporto"> Desporto e Lazer </string>
    <string name="categoriaEspaco"> Espaço Noturno </string>
    <string name="categoriaOutro"> Outro </string>

    <string name="defineRaio"> Definir o raio </string>
    <string name="inicio"> Iniciar </string>

    <string name="voltar">Voltar</string>
    <string name="seleciona">Selecionar tudo</string>
    <string name="remove">Remover escolhas</string>

    <string name="sair">Sair</string>
    <string name="som">Som</string>
    <string name="fala">Falar</string>
    <string name="ajuda">Ajuda</string>
    <string name="textoAjuda">Ajuda</string>
    <string name="aviso">Deseja mesmo sair da aplicação</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atencao">Atenção! </string>
    <string name="distancia">Distancia:\n  </string>

    <string name="menoscinquenta">Está a uma distancia menor que cinquenta metros</string>
    <string name="cinquentacem">Está a uma distancia entre cinquenta metros a cem metros</string>
    <string name="cemduzentos">Está a uma distancia entre cem metros a duzentos metros</string>
    <string name="maisduzentos">Está a uma distancia a mais de duzentos metros</string>


    <string name="comandosubirvolume">volume máximo</string>
    <string name="comandodescervolume">volume mínimo</string>
    <string name="comandomediovolume">volume médio</string>
    <string name="telefonar">telefonar</string>
    <string name="irpara">ir para</string>
    <string name="verdescricao">ver descrição</string>

    <string name="btInicia">Por favor escolha pelo menos um ponto.</string>
    <string name="ativarGps">Por favor active o gps</string>
    <string name="ok">Ok</string>
    <string name="perguntaFuncionalidades">Funcionalidades Especiais</string>
    <string name="funcionalidadesNet">Para utilizar diversas funcionalidades (Reconhecimento de voz, Obter caminho com maior precisão) necessita de aceder a internet.</string>
    <string name="dadosMoveis">Dados móveis</string>
    <string name="funcionalidadesSom">Deseja que a aplicação fale durante a viagem.</string>
    <string name="funcionalidadesInformacao">Pode sempre alterar uma das suas escolhas durante a utilização do Guia.</string>
    <string name="wifi">Wifi</string>
    <string name="caminhonet">Caminho net</string>

    <string name="trabalhoElaborado">Trabalho Elaborado por:</string>
    <string name="tiagoSousa">Tiago Sousa</string>
    <string name="tiagoCoelho">Tiago Coelho</string>

    <string name="aumentaVideo">Ampliar</string>
    <string name="diminuiVideo">Diminuir</string>
    <string name="descricao">Descrição: </string>
    <string name="checkTudo">Selecionar Tudo</string>
    <string name="distanciade">Está a uma distancia de </string>


</resources>
