<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/btCheckTudo"
        android:icon="@drawable/check"
        android:title="@string/checkTudo"
        app:showAsAction="ifRoom"
        />

        <item android:id="@+id/btSom"
            android:icon="@drawable/abc_ic_voice_search_api_mtrl_alpha"
            android:title="@string/som"
            app:showAsAction="ifRoom"
            />

    <item android:id="@+id/btAjuda"
        android:icon="@drawable/info"
        android:title="@string/ajuda"
        app:showAsAction="ifRoom"

        />
    <item android:id="@+id/btSair"
        android:icon="@drawable/wardrobe"
        android:title="@string/sair"
        app:showAsAction="ifRoom"
        />


</menu>